# WaylandBookHaskellClient

./: CHANGELOG.md  HaskellClient.cabal  LICENSE  README.md
app/: Main.hs
cbits/: wayland2hs.c
includes/: wayland2hs.h
src/: Client.chs  ClientState.hs  WaylandADTs.hs
