cabal-version:      3.0
name:               HaskellClient
version:            0.1.0.0
synopsis:           Playing around with a wayland client.
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Roland Senn
maintainer:         rsx@bluewin.ch
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library               hsclient
    import:           warnings
    exposed-modules:  Client,
                      ClientState,
                      WaylandADTs

    -- other-modules:
    C-sources:        cbits/wayland2hs.c,
                      cbits/xdg-shell-protocol.c
    Include-dirs:     includes
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0,
                      random-strings,
                      -- shared-memory,        -- package from Niklas Hambüchen
                      unix
    hs-source-dirs:   src
    default-language: Haskell2010
    extra-libraries:  wayland-client

executable client
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        unix,
        hsclient

    hs-source-dirs:   app
    default-language: Haskell2010
